<resources>
    <string name="app_name">3roodk</string>

    <string name="facebook_application_id" translatable="false">229239990794131</string>
    <string name="key_map">AIzaSyBJXyfbeNhkrKAN6FN_5RZDLSUTskdNutU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">تسجيل الدخول</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="user_name">إسم المستخدم</string>
    <string name="user_email">البريد الإلكتروني</string>
    <string name="user_password">كلمة السر</string>
    <string name="user_confirm_password">تأكيد كلمة السر</string>
    <string name="male">ذكر</string>
    <string name="female">أنثى</string>
    <string name="user_register">تسجيل</string>
    <string name="left_time">الوقت المتبقى</string>
    <string name="price">السعر</string>
    <string name="day">يوم</string>
    <string name="hour">ساعة</string>
    <string name="minute">دقيقة</string>
    <string name="before">قبل</string>
    <string name="after">بعد</string>
    <string name="sale">الخصم</string>
    <string name="desc">وصف</string>
    <string name="shop_name">اسم المحل</string>
    <string name="work_time">مواعيد العمل</string>
    <string name="address">العنوان</string>
    <string name="rate">التقييم الكلي</string>
    <string name="shop_way">طريق المحل</string>
    <string name="see_way">شوف الطريق</string>
    <string name="mobile">الموبايل</string>
    <string name="title_activity_full_screen_image_slider">FullScreenImageSlider</string>

    <!-- add offer -->
    <string name="err_msg_name">ادخل اسم صحيح</string>
    <string name="err_msg_desc">ادخل وصف مناسب</string>
    <string name="err_msg_priceBefore">ادخل سعر حقيقى</string>
    <string name="err_msg_priceAfter">ادخل سعر مناسب</string>

    <string name="shop_err_msg_name">من فضلك أدخل اسم صحيح لمحلك</string>
    <string name="shop_err_msg_working">من فضلك أدخل مواعيد عمل صحيحه</string>
    <string name="shop_err_msg_contacts">من فضلك أدخل رقم موبايلك</string>
    <string name="shop_err_msg_addressinfo">من فضلك ادخل تفاصيل مفيده لعنوان محلك</string>
    <string name="ability_to_sign">يمكنك التسجيل معنا</string>
    <string name="choose_location">حدد مكانك</string>
    <string name="or">ـــــــــ أو ـــــــــ</string>
    <string name="look_offers_around_you">شوف العروض اللى حواليك</string>
    <string name="home">الصفحة الرئيسية</string>
    <string name="add_new_offer">أضف عرض جديد</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="re_get_location">إعادة معرفة المكان</string>
    <string name="create_new_shop">عمل محل جديد</string>
    <string name="menu">القائمة</string>
    <string name="here">هنا</string>
    <string name="with_us_sale">مع عروضك مفيش عرض هيفوتك</string>
    <string name="accessories">إكسسوار</string>
    <string name="home_tools">أدوات منزليه</string>
    <string name="resturants">مطاعم</string>
    <string name="mobile_category">موبايل</string>
    <string name="computer">كمبيوتر</string>
    <string name="shoes">أحذيه</string>
    <string name="services">خدمات</string>
    <string name="super_market">سوبر ماركت</string>
    <string name="clothes">ملابس</string>
    <string name="offer_name">اسم العرض</string>
    <string name="offer_desc">وصف العرض</string>
    <string name="price_before_sale">السعر قبل الخصم</string>
    <string name="price_after_sale">السعر بعد الخصم</string>
    <string name="offer_duration">مده العرض</string>
    <string name="choose_category">اختار القسم</string>
    <string name="add_offer">ضيف الإعلان</string>
    <string name="change_address">تغيير العنوان</string>
    <string name="shop_working_time">مواعيد عمل المحل</string>
    <string name="have_logo">لديك لوجو</string>
    <string name="shop_address">عنوان المحل</string>
    <string name="address_details">تفاصيل للعنوان</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="add">أضف</string>
    <string name="add_comment">أضف تعليق</string>
    <string name="my_shop">محلاتي</string>
    <string name="edit">تعديل</string>
    <string name="done">حفظ التعديلات</string>
    <string name="facebookPage">تابعنا على الفيس بوك</string>
    <string name="favorites">العروض المُفضله</string>
    <string name="feedback">رأيك يهمنا</string>
    <string name="privacypolicy">سياسه الخصوصيه</string>
    <string name="aboutapp">حول التطبيق</string>
    <string name="your_rate">تقييمك</string>
    <string name="choose_shop">اختار المحل</string>
    <string name="signing_in">جاري تسجيل الدخول</string>
    <string name="active_offers">العروض الحالية</string>
    <string name="all_offers">كل العروض</string>
    <string name="loading">جارى التحميل ...</string>
    <string name="change_logo">غير اللوجو</string>
    <string name="new_shop">محل جديد</string>
    <string name="categories">الأقسام</string>
    <string name="add_mobile_number">أدخل رقم الموبايل</string>
    <string name="new_offer">إعلان جديد</string>
    <string name="add_new_item">إضافة سلعة جديدة +</string>
    <string name="your_opinion">رأيك يهمنا</string>
    <string name="email">الإيميل</string>
    <string name="name">الإسم</string>
    <string name="send">إرسال</string>
    <string name="title">عنوان الرسالة</string>
    <string name="feedback_content">محتويات الرسالة</string>
    <string name="continue_">المتابعة</string>
    <string name="into_text">لضمان أفضل آداء للبرنامج يجب تفعيل خاصية الموقع أثناء الإستخدام وعلى الاٌقل مرة واحدة الآن..\nوهذا لكي نستطيع تحديد مكانك بدقة وإحضار العروض القريبة منك.</string>
    <string name="second">ثانية</string>
    <string name="dialog_msg">لكى تتمكن من إنشاء محل وإضافه عروضك يجب الاتصال اولاً بفريق العمل للحصول على الكود المطلوب، شكراً لك!</string>
    <string name="inActive">(غير مُفعل)</string>
    <string name="replay_comment">الرد على هذا التعليق</string>
    <string name="replay">رد</string>
    <string name="go_to_offer">اذهب للعرض</string>
    <string name="detail_and_payment">الشراء والتفاصيل</string>
    <string name="new_hyper">هايبر جديد</string>
</resources>
