<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ibtnProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ahmed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_profile_image"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtxtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black" />

            <EditText
                android:id="@+id/edtxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black" />

            <EditText
                android:id="@+id/edtxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black" />

            <EditText
                android:id="@+id/edtxtRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/user_confirm_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spnCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spnState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawablePadding="10dp"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:paddingRight="20dp"
                    android:text="@string/female"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rbtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawablePadding="10dp"
                    android:drawableRight="@android:drawable/btn_radio"
                    android:text="@string/male"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                tools:text="Test" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/user_register" />
    </LinearLayout>
</LinearLayout>