<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/light_black" />

        <EditText
            android:id="@+id/edtxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/light_black" />

        <TextView
            android:id="@+id/txtError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            tools:text="Test" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/user_register" />
    </LinearLayout>

</LinearLayout>