<com.redbooth.WelcomePageLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".UI.IntroActivity.IntroActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/look_offers_around_you"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/dialog_holo_light_frame">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:gravity="right"
                android:text="@string/into_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />


            <Button
                android:id="@+id/btnContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="10dp"
                android:background="@drawable/custom_background_buttons"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</com.redbooth.WelcomePageLayout>