<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_inactive_shops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f9f513"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:textColor="#386af3"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/items_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


            <Button
                android:id="@+id/add_new_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_background_buttons"
                android:padding="8dp"
                android:text="@string/add_new_item"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_offername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_offername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:gravity="center"
                    android:hint="@string/offer_name"
                    android:inputType="textCapWords"
                    android:lines="1"
                    android:padding="10dp"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/input_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:hint="@string/offer_desc"
                    android:inputType="textCapWords"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/duration_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:hint="@string/offer_duration"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/offer_duration" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/cat_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:hint="@string/choose_category"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/choose_category" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />


                <com.weiwangcn.betterspinner.library.BetterSpinner
                    android:id="@+id/shop_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:hint="@string/choose_shop"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/choose_shop" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <Switch
                    android:id="@+id/facebook_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="10dp"
                    android:switchPadding="10dp"
                    android:text="نشر على الفيس بوك " />


                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:visibility="gone">

                    <RadioButton
                        android:id="@+id/radio_gif"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:text="Gif" />

                    <RadioButton
                        android:id="@+id/radio_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:text="one image" />

                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_previewadd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="مراجعه"
                    android:visibility="gone" />


                <com.dd.morphingbutton.impl.IndeterminateProgressButton
                    android:id="@+id/btn_publishadd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/custom_background_buttons"
                    android:text="@string/add_offer"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
